@@ -16,6 +16,8 @@
   * Support parsing git mbox patches without a version tail, as generated by
     Mercurial.  (Jelmer Vernooij)
 
+  * Run the tutorial inside the test suite. (Jelmer Vernooij)
+
 0.6.2	2010-10-16
 
  BUG FIXES
